BUG 4798, 4806, 4805, 4799: Fix misc bugs * Fix alignment of checkbox rendering * Make page view listen to updates and refresh when the number of rows change (such as row deletion) * customCellClasses in table weren't being applied properly due to a missing space * If location editor gets just a string, try to parse it as an address * Color changes in Highcharts don't work on a regular update; so force it
QA: Make sure bugs are fixed

--- a/app/styles/table-core.sass
+++ b/app/styles/table-core.sass
@@ -392,26 +392,25 @@ div.blist-table-editor
   .align-right
     text-align: right
 
-.blist-table .align-left
-  .blist-checkbox
-    background-position: left center
+.blist-table .blist-td .blist-checkbox
+  display: block
+  float: none
+  margin: 0 auto
 
+.blist-table .align-left
+  .blist-checkbox,
   .blist-flag
     float: left
 
 .blist-table .align-center
-  .blist-checkbox
-    background-position: center center
-
+  .blist-checkbox,
   .blist-flag
     display: block
     float: none
     margin: 0 auto
 
 .blist-table .align-right
-  .blist-checkbox
-    background-position: right center
-
+  .blist-checkbox,
   .blist-flag
     float: right
     text-align: left
